[gd_scene load_steps=9 format=2]

[ext_resource path="res://img/btn-def3.png" type="Texture" id=1]
[ext_resource path="res://img/btn_def3_p.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/BtnSFX.gd" type="Script" id=3]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/AudioPlayer.gd" type="Script" id=5]
[ext_resource path="res://img/music-player (1).png" type="Texture" id=6]
[ext_resource path="res://img/star.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[node name="TextureButton" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 700.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 3 )
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="Titulo" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 25.0
margin_right = 686.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Botão de testes"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Sub" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 105.0
margin_right = 176.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898438, 0.813606, 0.122833, 1 )
text = "Episódio"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="EP" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_top = 107.0
margin_right = 325.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="AudioPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = null
volume_db = 5.0
autoplay = false
mix_target = 2
bus = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Pause" ]

[node name="picon" type="Sprite" parent="." index="4"]

position = Vector2( 653.353, 40.0583 )
scale = Vector2( 1.53254, 1.53254 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Material", "Visibility", "Z Index" ]

[node name="AddFav" type="TextureButton" parent="." index="5"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 634.0
margin_top = 91.0
margin_right = 682.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
expand = true
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[connection signal="pressed" from="." to="AudioPlayer" method="play_sfx"]

[connection signal="start_play" from="." to="." method="_on_TextureButton_start_play"]

[connection signal="finished" from="AudioPlayer" to="." method="_on_AudioPlayer_finished"]

[connection signal="pressed" from="AddFav" to="." method="set_fav_to"]


